# detect-expert-client

./: .dockerignore  .env.example  .gitignore  DOCKER_HUB.md  Dockerfile  README.md  pyproject.toml
detect_expert/: __init__.py  cli.py  client.py  exceptions.py  models.py
examples/: basic_usage.py
tests/: __init__.py
